--- a/src/Components/Sections/Aboutus/Aboutus.css
+++ b/src/Components/Sections/Aboutus/Aboutus.css
@@ -2,22 +2,24 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  gap: 1.5rem;
 }
 
 .aboutus-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   gap: 1rem;
-  width: 80%;
-  background-color: red;
 }
 
-.inner-div {
+.aboutus-container img {
+  width: 100px;
+}
+
+.aboutus-container div {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  background-color: yellow;
   justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
